# accountability-challenge

./: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  DEPLOYMENT_GUIDE.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  SMART_CONTRACTS.md  USER_GUIDE.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.setup.ts
.github/workflows/: ci.yml
contracts/challenge-manager/: Cargo.toml
contracts/challenge-manager/src/: lib.rs
contracts/challenge-manager/test_snapshots/test/: test_complete_challenge.1.json  test_create_challenge.1.json  test_create_challenge_invalid_deadline.1.json  test_expire_challenge.1.json  test_fail_challenge_by_creator.1.json  test_fail_challenge_by_partner.1.json
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
scripts/: deploy.js  upgrade.js
src/__tests__/: challenge.test.tsx  integration.test.tsx  wallet.test.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/activity/: page.tsx
src/app/analytics/: page.tsx
src/app/challenge/[id]/: page.tsx
src/app/create/: page.tsx
src/app/dashboard/: page.tsx
src/app/settings/: page.tsx
src/app/transactions/: page.tsx
src/components/: navbar.tsx  providers.tsx
src/components/ui/: loading.tsx
src/features/activity/: services.ts  state.ts
src/features/analytics/: state.ts
src/features/challenge/: services.ts  state.ts  types.ts
src/features/settings/: state.ts
src/features/transactions/: state.ts
src/features/wallet/: hooks.ts  services.ts  state.ts  types.ts
(+9 files in other folders)
